# N-gram-histograms

./: CMakeLists.txt  README.md  main_total.cpp  speedup_texts_size.py  speedup_threads.py
texts/: Alice’s_Adventures_in_Wonderland.txt  Ethics_ of_Aristotle.txt  Iliad.txt  Oliver_Twist.txt  Sense_and_Sensibility.txt  The_Great_Gatsby.txt  The_Turtles_of_Tasman.txt  The_online_world.txt  Twenty_Thousand_Leagues_under_the_Sea.txt  Ulysses.txt  Vanity_fair.txt  Winnie_the_Pooh.txt  Women_in_Modern_Industry.txt  Zarathustra.txt
